[project]
name = "digger"
version = "0.1.0"
description = "Tools for working with Seattle Department of Construction and Inspections data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "click>=8.3.0",
  "httpx>=0.28.1",
  "pydantic>=2.12.4",
]

[tool.pytest.ini_options]
testpaths = ["digger"]
python_files = ["*_test.py", "test_*.py"]

[tool.pyright]
include = ["digger"]
exclude = [".venv", ".git", ".github"]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=8.4.2",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.3",
]
