[project]
name = "digger"
version = "0.1.0"
description = "Tools for working with Seattle Department of Construction and Inspections data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "click>=8.3.0",
  "duckdb>=1.4.2",
  "folium>=0.20.0",
  "httpx>=0.28.1",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.7",
  "pandas>=2.3.3",
  "plotly>=6.4.0",
  "pydantic>=2.12.4",
  "pyright>=1.1.407",
  "pytest>=8.4.2",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.3",
]

[tool.pytest.ini_options]
testpaths = ["digger"]
python_files = ["*_test.py", "test_*.py"]

[tool.pyright]
include = ["digger"]
exclude = [".venv", ".git", ".github"]
